tests/snapshots/sfc/ts/patches__svg_multiline_d_attribute.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = {  }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("path", { d: "M10 10\n             L90 10\n             L90 90\n             Z" })

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("svg", { viewBox: "0 0 100 100" }, [
    _hoisted_1
  ]))
}

__sfc__.render = render
export default __sfc__
