tests/snapshots/sfc/ts/patches__svg_xlink_href_attribute.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = {  }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("use", { "xlink:href": "#icon-star" })

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("svg", null, [
    _hoisted_1
  ]))
}

__sfc__.render = render
export default __sfc__
